<resources>
    <string name="app_name">ActiveFit</string>
    <string name="app_moto">"""Every step count, Keep moving"""</string>

    <!-- Activities names -->
    <string name="title_activity_home">Home</string>
    <string name="title_activity_record">Record Workout</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Fragment names -->
    <string name="title_fragment_dashboard">Dashboard</string>
    <string name="title_fragment_profile">My profile</string>
    <string name="title_fragment_statistic">My Achievements</string>

    <!-- Navigation Buttons -->
    <string name="title_home">Home</string>
    <string name="title_workout_activity">Statistics</string>
    <string name="title_profile">Profile</string>

    <!-- Action buttons -->
    <string name="action_settings">Settings</string>
    <string name="action_app_start">Get Fit</string>
    <string name="action_start_workout">Start</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_profile_setup_done">Done</string>

    <!-- Textview -->
    <string name="profile_ask_age">How old are you?</string>
    <string name="profile_ask_gender">What is your gender?</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_no_gender">Do not wish to declare</string>
    <string name="profile_ask_weight">What is your weight?</string>
    <string name="profile_ask_height">What is your height?</string>
    <string name="profile_ask_daily_goals">What is your daily steps target?</string>
    <string-array name="daily_goals_list">
        <item>3000 Steps</item>
        <item>6000 Steps</item>
        <item>10000 Steps</item>
    </string-array>
    <string name="daily_goals_easy">3000 Steps</string>
    <string name="daily_goals_normal">6000 Steps</string>
    <string name="daily_goals_hard">10000 Steps</string>
    <string name="profile_ask_target_weight">What is your target weight?</string>
    <string name="profile_username">My profile</string>
    <string name="profile_label_age">Age</string>
    <string name="profile_label_gender">Gender</string>
    <string name="profile_label_height">Height</string>
    <string name="profile_label_weight">Weight</string>
    <string name="profile_label_target_steps">Target Steps</string>
    <string name="profile_label_target_weight">Target Weight</string>


    <string name="workout_running">Running</string>
    <string name="workout_walking">Walking</string>
    <string name="workout_duration">Duration</string>

    <string name="dashboard_header_text">Today</string>
    <string name="dashboard_steps_text">Steps</string>
    <string name="dashboard_steps_dummy">3456</string>
    <string name="dashboard_distance_text">Distance</string>
    <string name="dashboard_distance_default">0 km</string>
    <string name="dashboard_active_time_text">Active Time</string>
    <string name="dashboard_active_time_default">0 mn</string>
    <string name="dashboard_calories_text">Calories</string>
    <string name="dashboard_calories_default">0 Cal</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_basic">BasicActivity</string>

    <!-- Widget -->
    <string name="appwidget_text">steps</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_img">Runner silhouette</string>


</resources>
