<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:background="@color/colorPrimary"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id = "@+id/tv_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/text_large"
        android:textColor="@color/colorTextWhite"
        android:layout_marginTop="48dp"
        android:textStyle="bold"
        android:padding="@dimen/activity_horizontal_margin"/>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:gravity="center"
        android:keepScreenOn="true"
        app:srcCompat="@drawable/ic_trail_running_shoe"
        app:layout_constraintTop_toBottomOf="@id/tv_appname"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/app_moto"
        android:textColor="@color/colorTextWhite"
        android:padding="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/btn_app_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/action_app_start"
        android:background="@color/colorTextWhite"
        android:textColor="@color/colorPrimaryDark"/>
</android.support.constraint.ConstraintLayout>